--- a/src/main/resources/templates/layout/base_layout.html
+++ b/src/main/resources/templates/layout/base_layout.html
@@ -10,7 +10,7 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
 	rel="stylesheet"
 	integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-	crossorigin="anonymous">
+	crossorigin="anonymous" >
 <link rel="stylesheet" href="/css/base_layout/main.css" />
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
 <link rel="stylesheet" th:href="@{/css/base_layout/darkmode/darkmode.css}" />
@@ -80,6 +80,7 @@
 								<li sec:authorize="isAnonymous()"><a href="/user/signup">회원가입</a></li>
 								<li sec:authorize="isAuthenticated()"><a href="/board/list">내 게시판 목록</a></li>
 								<li sec:authorize="isAuthenticated()"><a href="/user/logout">로그아웃</a></li>
+								<li><a href="/adminUser/main">유저 관리페이지</a></li>
 							</ul>
 
 						</div>
